# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: superlinter.yml
brain_games/: __init__.py  cli.py  setup.cfg
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_progression.py
